--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -42,7 +42,7 @@ audio:not([controls]) {
  * Known issue: no IE6 support
  */
 [hidden] {
-  display: none;
+  display: none !important;
 }
 
 /* =============================================================================
@@ -320,7 +320,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
